[gd_scene load_steps=9 format=3 uid="uid://wu14x6pdx8fq"]

[ext_resource type="Script" uid="uid://f5rq7mfe77mn" path="res://entities/player/player.gd" id="1_symyc"]
[ext_resource type="Script" uid="uid://cqbpu4vebvpg2" path="res://entities/player/team_color.gd" id="2_abrql"]
[ext_resource type="PackedScene" uid="uid://dmvgovcr3dv16" path="res://entities/player/player_model.tscn" id="2_sglur"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sfv1e"]
size = Vector3(1, 1.75, 1.25049)

[sub_resource type="BoxMesh" id="BoxMesh_symyc"]

[sub_resource type="SphereMesh" id="SphereMesh_sglur"]

[sub_resource type="LabelSettings" id="LabelSettings_symyc"]
font_size = 60

[sub_resource type="ViewportTexture" id="ViewportTexture_symyc"]
viewport_path = NodePath("SubViewport")

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_mask = 3
script = ExtResource("1_symyc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, -0.125244)
shape = SubResource("BoxShape3D_sfv1e")

[node name="Pivot" type="Node3D" parent="."]

[node name="Player_Model" parent="Pivot" instance=ExtResource("2_sglur")]

[node name="TeamColor" type="MeshInstance3D" parent="Pivot"]
visible = false
mesh = SubResource("BoxMesh_symyc")
skeleton = NodePath("")
script = ExtResource("2_abrql")

[node name="Hand" type="Node3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0279134, 0.88669, -0.554928)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot/Hand"]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_sglur")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(256, 256)

[node name="PlayerNum" type="Label" parent="SubViewport"]
custom_minimum_size = Vector2(256, 256)
offset_right = 40.0
offset_bottom = 23.0
text = "Player #"
label_settings = SubResource("LabelSettings_symyc")
horizontal_alignment = 1

[node name="PlayerNumLabel" type="Sprite3D" parent="."]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 1, 0)
texture = SubResource("ViewportTexture_symyc")

[node name="LeaveTimer" type="Timer" parent="."]

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[node name="DebuffTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
[connection signal="timeout" from="DebuffTimer" to="." method="_on_debuff_timer_timeout"]
